--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "tsx --env-file .env index.ts --watch",
+    "dev": "tsx watch --env-file .env index.ts",
     "dev:docker": "docker compose up --watch",
     "start": "tsx --env-file .env index.ts",
     "format": "prettier . --write",
