--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format": "prettier . --write",
     "studio": "drizzle-kit studio",
     "build": "node esbuild.cjs",
-    "test": "mocha test/**/*.test.ts"
+    "test": "jest --config jest.config.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -20,9 +20,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.0.1",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mocha": "^10.0.10",
     "@types/pg": "^8.11.10",
@@ -31,11 +33,14 @@
     "chai": "^5.1.2",
     "chai-http": "^5.1.1",
     "drizzle-kit": "^0.26.2",
+    "jest": "^29.7.0",
     "mocha": "^11.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "puppeteer": "^23.10.0",
     "sinon": "^19.0.2",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
