--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "format": "prettier . --write",
     "studio": "drizzle-kit studio",
     "build": "node esbuild.cjs",
-    
-    "test":"jest --config jest.config.ts"
+    "test": "jest --config jest.config.ts",
+    "backend-test": "nyc --nycrc-path .nycrc-backend mocha"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -16,11 +16,14 @@
     "drizzle-orm": "^0.35.3",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nyc": "^17.1.0",
     "pg": "^8.13.1",
     "tsx": "^4.19.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@jest/types": "^29.6.3",
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.0.1",
@@ -31,8 +34,9 @@
     "@types/pg": "^8.11.10",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
-    "chai": "^5.1.2",
-    "chai-http": "^5.1.1",
+    "babel-jest": "^29.7.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "drizzle-kit": "^0.26.2",
     "jest": "^29.7.0",
     "mocha": "^11.0.1",
