--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.35.3",
+    "drizzle-orm": "latest",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
+    "puppeteer": "^23.10.0",
     "tsx": "^4.19.2",
     "zod": "^3.23.8"
   },
@@ -28,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mocha": "^10.0.10",
     "@types/pg": "^8.11.10",
+    "@types/puppeteer": "^5.4.7",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
     "chai": "^5.1.2",
@@ -37,7 +39,7 @@
     "mocha": "^11.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "puppeteer": "^23.10.0",
+    "puppeteer-core": "^23.10.0",
     "sinon": "^19.0.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
