--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format": "prettier . --write",
     "studio": "drizzle-kit studio",
     "build": "node esbuild.cjs",
-    "test": "jest --config jest.config.ts"
+    "test": "mocha test/**/*.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -20,28 +20,25 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.3",
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.0.1",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.1",
     "@types/pg": "^8.11.10",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
     "chai": "^5.1.2",
     "chai-http": "^5.1.1",
+    "cypress": "^13.16.1",
     "drizzle-kit": "^0.26.2",
-    "jest": "^29.7.0",
     "mocha": "^11.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "puppeteer": "^23.10.0",
     "sinon": "^19.0.2",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
 }
