--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier . --write",
     "studio": "drizzle-kit studio",
     "build": "tsc --outDir build",
-    "test": "mocha test/**/*.ts"
+    "test": "mocha test/**/*.ts",
+    "coverage": "nyc npm run test"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -20,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.0.1",
     "@types/express": "^5.0.0",
@@ -34,6 +36,7 @@
     "cypress": "^13.16.1",
     "drizzle-kit": "^0.26.2",
     "mocha": "^11.0.1",
+    "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "puppeteer": "^23.10.0",
