--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.6.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.0.1",
@@ -35,7 +36,9 @@
     "chai-http": "^5.1.1",
     "cypress": "^13.16.1",
     "drizzle-kit": "^0.26.2",
+    "github-actions-ctrf": "^0.0.57",
     "mocha": "^11.0.1",
+    "mocha-ctrf-json-reporter": "^0.0.6",
     "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
