--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,9 @@ services:
   server:
     build: .
     restart: always
-    env_file: .env
+    env_file:
+      - path: .env
+        required: false
     ports:
       - 3000:${PORT}
     develop:
@@ -14,7 +16,9 @@ services:
     image: postgres
     restart: always
     shm_size: 128mb
-    env_file: .env
+    env_file:
+      - path: .env
+        required: false
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
