--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chai": "^5.1.2",
     "chai-http": "^5.1.1",
     "cypress": "^13.16.1",
+    "cypress-ctrf-json-reporter": "^0.0.11",
     "drizzle-kit": "^0.26.2",
     "github-actions-ctrf": "^0.0.57",
     "mocha": "^11.0.1",
