--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,17 +48,17 @@ jobs:
 
       - name: Publish Mocha Test Results
         if: always()
-        run: npx github-actions-ctrf ctrf-report.json
+        run: pnpx github-actions-ctrf ctrf-report.json
 
       - name: Install Cypress
         run: pnpm add cypress --save-dev
 
       - name: Run Cypress tests
-        run: npx cypress run --reporter json --reporter-options output=ctrf-cypress-report.json
+        run: pnpx cypress run --reporter json --reporter-options output=ctrf-cypress-report.json
 
       - name: Publish Cypress Test Results
         if: always()
-        run: npx github-actions-ctrf ctrf-cypress-report.json
+        run: pnpx github-actions-ctrf ctrf-cypress-report.json
 
       # Stop Docker Compose services
       - name: Stop Docker Compose services
