--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
 
       # Start Docker Compose services
       - name: Start services with Docker Compose
-        run: docker compose up -d
+        run: docker compose up -d --wait --wait-timeout 30
 
       # Push database schema with drizzle-kit
       - name: Setup database schema with drizzle-kit
