--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier . --write",
     "studio": "drizzle-kit studio",
     "build": "tsup index.ts",
-    "test": "mocha test/**/*.ts",
+    "test:ui": "tsc --outDir cypress/build && cypress run",
+    "test:api": "mocha test/**/*.ts",
     "coverage": "nyc npm run test"
   },
   "dependencies": {
