--- a/compose.yml
+++ b/compose.yml
@@ -2,25 +2,29 @@ services:
   server:
     build: .
     restart: always
-    env_file: .env
+    env_file:
+      - path: .env
+        required: false
     ports:
       - 3000:${PORT}
     develop:
       watch:
         - path: .
           action: rebuild
-
+ 
   db:
     image: postgres
     restart: always
     shm_size: 128mb
-    env_file: .env
+    env_file:
+      - path: .env
+        required: false
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
-
+ 
 volumes:
   pgdata:
