--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
+      - uses: npm/action-setup@v4
+        name: Install npm
         with:
           version: 10
           run_install: false
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: 'npm'
 
       - name: Install Chrome
         run: |
@@ -41,7 +41,7 @@ jobs:
           sudo apt-get install -y google-chrome-stable
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       # Start Docker Compose services
       - name: Start services with Docker Compose
@@ -49,22 +49,22 @@ jobs:
 
       # Push database schema with drizzle-kit
       - name: Setup database schema with drizzle-kit
-        run: pnpm drizzle-kit push
+        run: npm drizzle-kit push
 
       # Build the application
       - name: Build application
-        run: pnpm build
+        run: npm build
 
       # Start the server
       - name: Start server
         run: |
-          pnpm start &
+          npm start &
           echo $! > server.pid
           sleep 10 # Wait for server to start
 
       # Run tests
       - name: Run all tests
-        run: pnpm test
+        run: npm test
 
       # Clean up server
       - name: Stop server
