--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "format": "prettier . --write",
     "studio": "drizzle-kit studio",
     "build": "node esbuild.cjs",
-    "test": "jest --config jest.config.ts"
+    "test": "jest --config jest.config.ts",
+    "test:api": "jest ocean_dcf_backend.test.ts",
+    "test:ui": "jest ocean_dcf_frontend.test.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -23,6 +25,7 @@
     "@jest/types": "^29.6.3",
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.0.1",
+    "@types/chai-http": "^3.0.5",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
@@ -32,6 +35,7 @@
     "@types/supertest": "^6.0.2",
     "chai": "^5.1.2",
     "chai-http": "^5.1.1",
+    "cypress": "^13.16.1",
     "drizzle-kit": "^0.26.2",
     "jest": "^29.7.0",
     "mocha": "^11.0.1",
