--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Run Backend Tests
         env:
           NODE_ENV: test
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          JWT_SECRET: "yO6txk2UBKuclKQZ"
         run: npm run test:api
 
       # Run Frontend Tests
