fix: use esm for compilation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "tsx --env-file .env index.ts",
     "format": "prettier . --write",
     "studio": "drizzle-kit studio",
-    "build": "node esbuild.cjs",
+    "build": "tsup index.ts",
     "test": "jest --config jest.config.ts"
   },
   "dependencies": {
@@ -44,6 +44,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsup": "^8.0.1",
     "typescript": "^5.7.2"
   }
 }
