--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,9 @@ jobs:
       POSTGRES_PASSWORD: "test123"
       JWT_SECRET: "test456"
       BROWSER_PATH: "/usr/bin/google-chrome"
+      # Add these environment variables for Chrome
+      DISPLAY: ":99.0"
+      PUPPETEER_EXECUTABLE_PATH: "/usr/bin/google-chrome"
 
     steps:
       - name: Checkout repository
@@ -26,6 +29,17 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+
+      # Set up virtual display for Chrome
+      - name: Set up virtual display
+        run: |
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+
+      - name: Install Chrome dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget gnupg ca-certificates procps libxss1 libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2
 
       - name: Install Chrome
         run: |
@@ -39,7 +53,7 @@ jobs:
 
       # Start Docker Compose services
       - name: Start services with Docker Compose
-        run: docker compose up -d --wait --wait-timeout 30
+        run: docker compose up db -d --wait --wait-timeout 30
 
       # Push database schema with drizzle-kit
       - name: Setup database schema with drizzle-kit
@@ -49,9 +63,25 @@ jobs:
       - name: Build application
         run: npm run build
 
+      # Start the server
+      - name: Start server
+        run: |
+          node dist/index.js &
+          echo $! > server.pid
+          sleep 10 # Wait for server to start
+
       # Run tests
       - name: Run all tests
-        run: npm test
+        run: xvfb-run --auto-servernum npm test
+
+      # Clean up server
+      - name: Stop server
+        if: always()
+        run: |
+          if [ -f server.pid ]; then
+            kill $(cat server.pid)
+            rm server.pid
+          fi
 
       # Stop Docker Compose services
       - name: Stop Docker Compose services
