fix: add supertest

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "puppeteer": "^23.10.0",
     "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   }
