--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "tsx watch index.ts",
+    "dev": "tsx watch --env-file .env index.ts",
     "dev:docker": "docker compose up --watch",
     "start": "node dist/index.js",
     "format": "prettier . --write",
@@ -16,7 +16,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "puppeteer": "^23.10.0",
+    "puppeteer": "^23.11.1",
     "tsx": "^4.19.2",
     "zod": "^3.23.8"
   },
@@ -39,7 +39,6 @@
     "mocha": "^11.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "puppeteer-core": "^23.10.0",
     "sinon": "^19.0.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
