--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "studio": "drizzle-kit studio",
     "build": "node esbuild.cjs",
     "test": "jest --config jest.config.ts",
-    "test:api": "jest --detectOpenHandles test/ocean_dcf_backend.test.ts",
-    "test:ui": "jest test/ocean_dcf_frontend.test.ts"
+    "test:api": "jest --runInBand --detectOpenHandles --forceExit test/ocean_dcf_backend.test.ts",
+    "test:ui": "jest  --runInBand --detectOpenHandles --forceExit test/ocean_dcf_frontend.test.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
