--- a/.env.testing
+++ b/.env.testing
@@ -2,4 +2,5 @@ PORT=3000
 DEBUG=true
 NODE_ENV=development
 POSTGRES_PASSWORD=testing123
+POSTGRES_CONNECTION_URL=postgres://postgres:testing123@localhost:5432/postgres
 JWT_SECRET=testing123
