--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 PORT=3000
 DEBUG=true
 NODE_ENV=development
-POSTGRES_PASSWORD=testing123
 POSTGRES_CONNECTION_URL=postgres://postgres:testing123@localhost:5432/postgres
-JWT_SECRET=testing123
+POSTGRES_PASSWORD=testing123
+JWT_SECRET=test456
