--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,10 @@ jobs:
 
       # Start Docker Compose services
       - name: Start services with Docker Compose
-        run: docker compose up -d --wait --wait-timeout 30
+        run: docker compose up db -d --wait --wait-timeout 30
+
+      - name: Run Node.js development server
+        run: npm run dev:api &
 
       # Push database schema with drizzle-kit
       - name: Setup database schema with drizzle-kit
