--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,13 +29,16 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      
+      - name: Build backend
+        run: npm run build
 
       # Start Docker Compose services
       - name: Start services with Docker Compose
         run: docker compose up db -d --wait --wait-timeout 30
 
-      - name: Run Node.js development server
-        run: npm run dev:api &
+      - name: Run Node.js server
+        run: npm start
 
       # Push database schema with drizzle-kit
       - name: Setup database schema with drizzle-kit
