fix: make server run in background

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,7 +38,7 @@ jobs:
         run: docker compose up db -d --wait --wait-timeout 30
 
       - name: Run Node.js server
-        run: npm start
+        run: npm start &
 
       # Push database schema with drizzle-kit
       - name: Setup database schema with drizzle-kit
