--- a/compose.yml
+++ b/compose.yml
@@ -2,29 +2,25 @@ services:
   server:
     build: .
     restart: always
-    env_file:
-      - path: .env
-        required: false
+    env_file: .env
     ports:
       - 3000:${PORT}
     develop:
       watch:
         - path: .
           action: rebuild
- 
+
   db:
     image: postgres
     restart: always
     shm_size: 128mb
-    env_file:
-      - path: .env
-        required: false
+    env_file: .env
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
- 
+
 volumes:
   pgdata:
