--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,8 @@ jobs:
       DEBUG: true
       NODE_ENV: "development"
       POSTGRES_PASSWORD: "test123"
+      POSTGRES_CONNECTION_URL: "postgresql://postgres:test123@localhost:5432/postgres"
       JWT_SECRET: "test456"
-      BROWSER_PATH: "/usr/bin/google-chrome"
-      DISPLAY: ":99.0"
-      PUPPETEER_EXECUTABLE_PATH: "/usr/bin/google-chrome"
 
     steps:
       - name: Checkout repository
@@ -27,22 +25,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
-
-      - name: Install Chrome dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget gnupg ca-certificates procps libxss1 libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2
-
-      - name: Install Chrome
-        run: |
-          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: npm install
+
+      # Write environment variables to .env file
+      - name: Write environment variables to .env file
+        run: |
+          echo "PORT=${{ env.PORT }}" > .env
+          echo "DEBUG=${{ env.DEBUG }}" >> .env
+          echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
+          echo "POSTGRES_PASSWORD=${{ env.POSTGRES_PASSWORD }}" >> .env
+          echo "POSTGRES_CONNECTION_URL=${{ env.POSTGRES_CONNECTION_URL }}" >> .env
+          echo "JWT_SECRET=${{ env.JWT_SECRET }}" >> .env
 
       # Start Docker Compose services
       - name: Start services with Docker Compose
@@ -52,42 +48,9 @@ jobs:
       - name: Setup database schema with drizzle-kit
         run: npx drizzle-kit push
 
-      # Build the application
-      - name: Build application
-        run: npm run build
-
-      # Start the server
-      - name: Start server
-        run: |
-          node dist/index.js &
-          echo $! > server.pid
-          sleep 10 # Wait for server to start
-
-      # Run tests
-      - name: Run all tests
-        run: xvfb-run --auto-servernum npm test
-
-      # Clean up server
-      - name: Stop server
-        if: always()
-        run: |
-          if [ -f server.pid ]; then
-            kill $(cat server.pid)
-            rm server.pid
-          fi
+      - name: Run tests
+        run: npm run test
 
       # Stop Docker Compose services
       - name: Stop Docker Compose services
-        if: always()
         run: docker compose down
-
-      # Upload test results
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            coverage/
-            junit.xml
-          retention-days: 30
