--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "express": "^4.21.1",
+    "express-status-monitor": "^1.3.4",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "tsx": "^4.19.2",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.0.1",
     "@types/express": "^5.0.0",
+    "@types/express-status-monitor": "^1.3.3",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.1",
