--- a/rms-deployment.yaml
+++ b/rms-deployment.yaml
@@ -14,6 +14,6 @@ spec: # defines the desired state of the Deployment.
     spec: # specifies the container(s) to run
       containers:
       - name: rms-container
-        image: oceantp/rms-docker-img:latest
+        image: oceantp/dvops-project-dcf:latest
         ports:
         - containerPort: 5050 # specifies the port that the application listens on
