--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploy Telegram Bot
+    name: Deploy Devops Project
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
