--- a/rms-deployment.yaml
+++ b/rms-deployment.yaml
@@ -19,7 +19,7 @@ spec: # defines the desired state of the Deployment.
         - containerPort: 3000 # specifies the port that the application listens on
         env:
         - name: PORT
-          value: "3000"
+          value: "5050"
         - name: DEBUG
           value: "true"
         - name: NODE_ENV
@@ -27,6 +27,26 @@ spec: # defines the desired state of the Deployment.
         - name: POSTGRES_PASSWORD
           value: "QTadFsylIQlo"
         - name: POSTGRES_CONNECTION_URL
-          value: "postgres://postgres:QTadFsylIQlo@localhost:5432/postgres"
+          value: "postgres://postgres:QTadFsylIQlo@rmsaksclus-devopsgroup-1b61aa-je5hk0rh.hcp.centralus.azmk8s.io:5432/postgres"
         - name: JWT_SECRET
           value: "yO6txk2UBKuclKQZ"
+
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: rms-deployment
+# spec:
+#   replicas: 2  # Specifies how many identical replicas (pods) should be maintained
+#   selector:
+#     matchLabels:
+#       app: rms-docker-img
+#   template:
+#     metadata:
+#       labels:
+#         app: rms-docker-img
+#     spec:
+#       containers:
+#       - name: rms-container
+#         image: oceantp/dvops-project-dcf:latest
+#         ports:
+#         - containerPort: 5050  # Port that the application listens on
