--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,73 +1,31 @@
-# name: Deploy docker image to GitHub Registry
+name: Deploy docker image to GitHub Registry
 
-# on:
-#   push:
-#   pull_request:
-#   workflow_dispatch:
-
-# jobs:
-#   deploy:
-#     name: Deploy Devops Project
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v3
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v3
-#       - name: Login to Docker Hub
-#         uses: docker/login-action@v3
-#         with:
-#           username: ${{ vars.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_TOKEN }}
-#       - name: Build and push docker image
-#         uses: docker/build-push-action@v6
-#         with:
-#           context: .
-#           push: true
-#           tags: ${{ vars.DOCKERHUB_USERNAME }}/dvops-project-dcf:latest
-#           cache-from: type=gha
-#           cache-to: type=gha,mode=max
-
-name: Kubernetes Deployment
- 
 on:
   push:
-    branches:
-      - main  # Trigger on pushes to the main branch
- 
+  pull_request:
+  workflow_dispatch:
+
 jobs:
   deploy:
-    runs-on: ubuntu-22.04
- 
+    name: Deploy Devops Project
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
- 
-      - name: Set up kubectl
-        run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > ~/.kube/config
-          kubectl config view
-          kubectl version --client
-          kubectl cluster-info
- 
-      - name: Check manifest files
-        run: |
-          if [ ! -f rms-service.yaml ] || [ ! -f rms-deployment.yaml ]; then
-            echo "Required Kubernetes manifest files are missing!" >&2
-            exit 1
-          fi
- 
-      - name: Deploy Kubernetes resources
-        run: |
-          kubectl apply -f rms-service.yaml || sleep 5 && kubectl apply -f rms-service.yaml
-          kubectl apply -f rms-deployment.yaml || sleep 5 && kubectl apply -f rms-deployment.yaml
- 
-      - name: Verify Deployment
-        run: |
-          kubectl rollout status deployment/rms-deployment
-          kubectl get all
-          kubectl describe deployment rms-deployment
-          kubectl logs -l app=rms-docker-img
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/dvops-project-dcf:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
