--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=3000
 DEBUG=true
 NODE_ENV=development
 POSTGRES_PASSWORD=QTadFsylIQlo
-POSTGRES_CONNECTION_URL=postgres://postgres:QTadFsylIQlo@localhost:5432/postgres
+POSTGRES_CONNECTION_URL=postgres://postgres:QTadFsylIQlo@35.240.200.228:5432/postgres
 JWT_SECRET=yO6txk2UBKuclKQZ
