--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "express": "^4.21.1",
+    "express-status-monitor": "^1.3.4",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "tsx": "^4.19.2",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
