--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "coverage": "nyc npm run test"
   },
   "dependencies": {
+    "@grafana/faro-web-sdk": "^1.13.1",
+    "@grafana/faro-web-tracing": "^1.13.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
@@ -21,6 +23,7 @@
     "pg": "^8.13.1",
     "tsx": "^4.19.2",
     "winston": "^3.17.0",
+    "winston-loki": "^6.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
